--- a/portfolio.html
+++ b/portfolio.html
@@ -90,222 +90,224 @@
       </section>
       <section class="padding-settings section">
         <ul class="container img-wrap">
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio1.jpg"
-                  alt="Technoduck"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Technoduck
-                  <div>Web-site</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio2.jpg"
-                  alt="Poster New Orlean vs Golden Star"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Poster New Orlean vs Golden Star
-                  <div>Design</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio3.jpg"
-                  alt="Seafood Restaurant"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Seafood Restaurant
-                  <div>Apps</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio4.jpg"
-                  alt="Project Prime"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Project Prime
-                  <div>Marketing</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio5.jpg"
-                  alt="Project Boxes"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Project Boxes
-                  <div>Apps</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Inspiration has no Borders
-                  <div>Web-site</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio7.jpg"
-                  alt="Limited Edition"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Limited Edition
-                  <div>Design</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio8.jpg"
-                  alt="Project LAB"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Project LAB
-                  <div>Marketing</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
-          <div class="overlay-hover">
-            <li class="box-overlay">
-              <p class="overlay">
-                Technocrack jest popularną platformą wykorzystywaną do
-                rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                do celów szpiegowskich i ataków na niezabezpieczone serwery
-                konkurencji
-              </p>
-            </li>
-            <li>
-              <figure class="img-box">
-                <img
-                  class="no-gap"
-                  src="images/portfolio9.jpg"
-                  alt="Growing Business"
-                  width="370"
-                />
-                <figcaption class="figcaption-padding box-border">
-                  Growing Business
-                  <div>Apps</div>
-                </figcaption>
-              </figure>
-            </li>
-          </div>
+          <li class="gone">
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio1.jpg"
+                    alt="Technoduck"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Technoduck
+                    <div>Web-site</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio2.jpg"
+                    alt="Poster New Orlean vs Golden Star"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Poster New Orlean vs Golden Star
+                    <div>Design</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio3.jpg"
+                    alt="Seafood Restaurant"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Seafood Restaurant
+                    <div>Apps</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio4.jpg"
+                    alt="Project Prime"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Project Prime
+                    <div>Marketing</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio5.jpg"
+                    alt="Project Boxes"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Project Boxes
+                    <div>Apps</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Inspiration has no Borders
+                    <div>Web-site</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio7.jpg"
+                    alt="Limited Edition"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Limited Edition
+                    <div>Design</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio8.jpg"
+                    alt="Project LAB"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Project LAB
+                    <div>Marketing</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+            <div>
+              <li class="box-overlay overlay-hover">
+                <p class="overlay">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </li>
+              <li>
+                <figure class="img-box">
+                  <img
+                    class="no-gap"
+                    src="images/portfolio9.jpg"
+                    alt="Growing Business"
+                    width="370"
+                  />
+                  <figcaption class="figcaption-padding box-border">
+                    Growing Business
+                    <div>Apps</div>
+                  </figcaption>
+                </figure>
+              </li>
+            </div>
+          </li>
         </ul>
       </section>
     </main>
@@ -359,7 +361,7 @@
               <li class="hnn">
                 <button class="sub-button" type="submit">Zapisz się</button>
                 <svg width="24" height="24" class="send-icon">
-                  <use href="/images/icons.svg#icon-send"></use>
+                  <use href="images/icons.svg#icon-send"></use>
                 </svg>
               </li>
             </div>
