--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul>
         <li>
           <div class="nav-icon">
-            <svg width="16" height="12">
+            <svg class="e-mail-svg" width="16" height="12">
               <use href="images/icons.svg#icon-e-mail"></use>
             </svg>
             <a class="icon" href="mailto:info@devstudio.com"
@@ -42,7 +42,7 @@
         </li>
         <li class="padding-tel">
           <div class="nav-icon">
-            <svg width="10px" height="16px">
+            <svg class="smartphone-svg" width="10px" height="16px">
               <use href="images/icons.svg#icon-smartphone"></use>
             </svg>
             <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
@@ -113,8 +113,8 @@
       </section>
       <section class="about-us-style section">
         <h2>What we do</h2>
-        <div class="container">
-          <div class="img-position">
+        <ul class="container">
+          <li class="img-position">
             <img
               src="images/gr1.jpg"
               alt="working place1"
@@ -122,8 +122,8 @@
               height="294"
             />
             <p class="text-about-us">Aplikacje komputerowe</p>
-          </div>
-          <div class="img-position">
+          </li>
+          <li class="img-position">
             <img
               class="img-position"
               src="images/gr2.jpg"
@@ -132,8 +132,8 @@
               height="294"
             />
             <p class="text-about-us">Aplikacje mobilne</p>
-          </div>
-          <div class="img-position">
+          </li>
+          <li class="img-position">
             <img
               src="images/gr3.jpg"
               alt="working place3"
@@ -141,156 +141,167 @@
               height="294"
             />
             <p class="text-about-us">Rozwiązania graficzne</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="section-background img-size section">
         <h2>Our Team</h2>
-        <div class="container">
-          <figure class="white-box">
-            <img src="images/christopher_walker.jpg" alt="Christopher Walker" />
-            <figcaption class="font-style-figacaption">
-              Christopher Walker
-              <div class="font-style-position">Product Designer</div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-instagram"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-twitter"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-facebook"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </div>
-            </figcaption>
-          </figure>
-          <figure class="white-box">
-            <img src="images/kylie_evans.jpg" alt="Kylie Evans" />
-            <figcaption class="font-style-figacaption">
-              Kylie Evans
-              <div class="font-style-position">Frontend Developer</div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-instagram"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-twitter"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-facebook"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </div>
-            </figcaption>
-          </figure>
-          <figure class="white-box">
-            <img src="images/ryan_harris.jpg" alt="Ryan Harris" />
-            <figcaption class="font-style-figacaption">
-              Ryan Harris
-              <div class="font-style-position">Marketing</div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-instagram"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-twitter"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-facebook"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </div>
-            </figcaption>
-          </figure>
-          <figure class="white-box">
-            <img src="images/tyler_moore.jpg" alt="Tyler Moore" />
-            <figcaption class="font-style-figacaption">
-              Tyler Moore
-              <div class="font-style-position">UI Designer</div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-instagram"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-twitter"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-facebook"></use>
-                </svg>
-              </div>
-              <div class="app-icons">
-                <svg width="20" height="20">
-                  <use href="images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </div>
-            </figcaption>
-          </figure>
-        </div>
+        <ul class="container">
+          <li>
+            <figure class="white-box">
+              <img
+                src="images/christopher_walker.jpg"
+                alt="Christopher Walker"
+              />
+              <figcaption class="font-style-figacaption">
+                Christopher Walker
+                <div class="font-style-position">Product Designer</div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="white-box">
+              <img src="images/kylie_evans.jpg" alt="Kylie Evans" />
+              <figcaption class="font-style-figacaption">
+                Kylie Evans
+                <div class="font-style-position">Frontend Developer</div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="white-box">
+              <img src="images/ryan_harris.jpg" alt="Ryan Harris" />
+              <figcaption class="font-style-figacaption">
+                Ryan Harris
+                <div class="font-style-position">Marketing</div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="white-box">
+              <img src="images/tyler_moore.jpg" alt="Tyler Moore" />
+              <figcaption class="font-style-figacaption">
+                Tyler Moore
+                <div class="font-style-position">UI Designer</div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="app-icons">
+                  <svg width="20" height="20">
+                    <use href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
       </section>
       <section class="section">
         <h2>Nasi klienci</h2>
-        <div class="container">
-          <div class="company-icons">
+        <ul class="container">
+          <li class="company-icons">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-1"></use>
             </svg>
-          </div>
-          <div class="company-icons">
+          </li>
+          <li class="company-icons">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-2"></use>
             </svg>
-          </div>
-          <div class="company-icons">
+          </li>
+          <li class="company-icons">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-3"></use>
             </svg>
-          </div>
-          <div class="company-icons">
+          </li>
+          <li class="company-icons">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-4"></use>
             </svg>
-          </div>
-          <div class="company-icons">
+          </li>
+          <li class="company-icons">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-5"></use>
             </svg>
-          </div>
-          <div class="company-icons">
+          </li>
+          <li class="company-icons">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-6"></use>
             </svg>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer-background footer-style">
@@ -401,20 +412,24 @@
               placeholder="Enter the text"
             ></textarea>
           </label>
-          <label class="checkbox-style">
-            <input
-              class="checkbox-box-style"
-              type="checkbox"
-              name="regulamin"
-              value="regulamin"
-            /><svg class="svg-check-position" width="16" height="15">
-              <use href="images/icons.svg#icon-check"></use>
-            </svg>
-            Oświadczam iż akceptuję&nbsp;<a class="link-style" href=""
-              >Regulamin</a
-            >&nbsp;i&nbsp;
-            <a class="link-style" href="">Politykę Prywatności.</a></label
-          >
+          <div class="checkbox-style">
+            <label>
+              <input
+                class="checkbox-box-style"
+                type="checkbox"
+                name="regulamin"
+                value="regulamin"
+              /><svg class="svg-check-position" width="16" height="15">
+                <use href="images/icons.svg#icon-check"></use>
+              </svg>
+            </label>
+            <p class="terms-style">
+              Oświadczam iż akceptuję&nbsp;<a class="link-style" href=""
+                >Regulamin</a
+              >&nbsp;i&nbsp;
+              <a class="link-style" href="">Politykę Prywatności.</a>
+            </p>
+          </div>
           <div class="button-position">
             <button class="button-send-style" type="submit">Send</button>
           </div>
