--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             ></textarea>
           </label>
           <div class="checkbox-style">
-            <label>
+            <label class="checkbox-btn">
               <input
                 class="checkbox-box-style"
                 type="checkbox"
@@ -422,13 +422,13 @@
               /><svg class="svg-check-position" width="16" height="15">
                 <use href="images/icons.svg#icon-check"></use>
               </svg>
+              <p class="terms-style">
+                Oświadczam iż akceptuję&nbsp;<a class="link-style" href=""
+                  >Regulamin</a
+                >&nbsp;i&nbsp;
+                <a class="link-style" href="">Politykę Prywatności.</a>
+              </p>
             </label>
-            <p class="terms-style">
-              Oświadczam iż akceptuję&nbsp;<a class="link-style" href=""
-                >Regulamin</a
-              >&nbsp;i&nbsp;
-              <a class="link-style" href="">Politykę Prywatności.</a>
-            </p>
           </div>
           <div class="button-position">
             <button class="button-send-style" type="submit">Send</button>
