--- a/index.html
+++ b/index.html
@@ -4,65 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-06</title>
+    <title>goit-markup-hw-07</title>
     <link rel="stylesheet" href="css/modern-normalize.min.css" />
-    <link href="css/styles.css" rel="stylesheet " />
+    <link href="css/main.min.css" rel="stylesheet " />
     <link href="images/icons.svg" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap&family=Roboto:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap&family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <header class="nav-block nav-style container">
-      <nav>
-        <ul>
-          <li class="logo">
-            <a href="#">Web<span class="logo-color">Studio</span></a>
+    <header class="header">
+      <nav class="navigation">
+        <ul class="header__list-style">
+          <li class="logo logo--padding">
+            <a href="#">Web<span class="logo__color">Studio</span></a>
           </li>
-          <li><a href="#" class="hover studio-visual">Studio</a></li>
-          <li class="padding-portfolio">
-            <a href="portfolio.html" class="hover">Portfolio</a>
+          <li>
+            <a href="#" class="navigation__hfa navigation__underline-studio"
+              >Studio</a
+            >
           </li>
-          <li><a href="#" class="hover">Contacts</a></li>
+          <li class="navigation__inside-padding">
+            <a href="portfolio.html" class="navigation__hfa">Portfolio</a>
+          </li>
+          <li><a href="#" class="navigation__hfa">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="navigation header__list-style">
         <li>
-          <div class="nav-icon">
-            <svg class="e-mail-svg" width="16" height="12">
+          <div class="contacts">
+            <svg class="contacts__e-mail-svg" width="16" height="12">
               <use href="images/icons.svg#icon-e-mail"></use>
             </svg>
-            <a class="icon" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </div>
         </li>
-        <li class="padding-tel">
-          <div class="nav-icon">
-            <svg class="smartphone-svg" width="10px" height="16px">
+        <li class="contacts__inside-padding">
+          <div class="contacts">
+            <svg class="contacts__phone-svg" width="10px" height="16px">
               <use href="images/icons.svg#icon-smartphone"></use>
             </svg>
-            <a class="icon" href="tel:+1212-772-4150">+1 212-772-4150</a>
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
           </div>
         </li>
       </ul>
     </header>
     <main>
-      <div class="background-position">
-        <section class="head-section-style section">
-          <h1>EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS</h1>
-          <button data-modal-open class="button-style">
+      <div class="background">
+        <section class="background__gradient">
+          <h1 class="background__h1">
+            EFFECTIVE SOLUTIONS FOR<br />YOUR BUSINESS
+          </h1>
+          <button data-modal-open class="main-button main-button--placement">
             Request our service
           </button>
         </section>
       </div>
-      <section class="info-section-style section">
-        <ul class="container">
+      <section class="info-section">
+        <ul class="info-section__list-style">
           <li>
-            <div class="info-icon-background">
+            <div class="info-section__svg-background">
               <svg width="65" height="70">
                 <use href="images/icons.svg#icon-antenna"></use>
               </svg>
@@ -74,7 +78,7 @@
             </p>
           </li>
           <li>
-            <div class="info-icon-background">
+            <div class="info-section__svg-background">
               <svg width="66" height="70">
                 <use href="images/icons.svg#icon-clock"></use>
               </svg>
@@ -86,7 +90,7 @@
             </p>
           </li>
           <li>
-            <div class="info-icon-background">
+            <div class="info-section__svg-background">
               <svg width="70" height="70">
                 <use href="images/icons.svg#icon-diagram"></use>
               </svg>
@@ -98,12 +102,12 @@
             </p>
           </li>
           <li>
-            <div class="info-icon-background">
+            <div class="info-section__svg-background">
               <svg width="70" height="70">
                 <use href="images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
-            <h3>modern technologies</h3>
+            <h3>MODERN TECHNOLOGIES</h3>
             <p>
               We use innovative tools to solve assigned tasks. It's time to
               simplify work processes.
@@ -111,19 +115,19 @@
           </li>
         </ul>
       </section>
-      <section class="about-us-style section">
+      <section class="about-us">
         <h2>What we do</h2>
-        <ul class="container">
-          <li class="img-position">
+        <ul class="about-us__display">
+          <li>
             <img
               src="images/gr1.jpg"
               alt="working place1"
               width="370"
               height="294"
             />
-            <p class="text-about-us">Aplikacje komputerowe</p>
+            <p class="about-us__overlay">Aplikacje komputerowe</p>
           </li>
-          <li class="img-position">
+          <li>
             <img
               class="img-position"
               src="images/gr2.jpg"
@@ -131,31 +135,31 @@
               width="370"
               height="294"
             />
-            <p class="text-about-us">Aplikacje mobilne</p>
+            <p class="about-us__overlay">Aplikacje mobilne</p>
           </li>
-          <li class="img-position">
+          <li>
             <img
               src="images/gr3.jpg"
               alt="working place3"
               width="370"
               height="294"
             />
-            <p class="text-about-us">Rozwiązania graficzne</p>
+            <p class="about-us__overlay">Rozwiązania graficzne</p>
           </li>
         </ul>
       </section>
-      <section class="section-background img-size section">
-        <h2>Our Team</h2>
-        <ul class="container">
+      <section class="our-team">
+        <h2 class="our-team__heading">Our Team</h2>
+        <ul class="our-team__container img-size">
           <li>
-            <figure class="white-box">
+            <figure class="our-team__person-bg">
               <img
                 src="images/christopher_walker.jpg"
                 alt="Christopher Walker"
               />
-              <figcaption class="font-style-figacaption">
+              <figcaption class="our-team__figacaption">
                 Christopher Walker
-                <div class="font-style-position">Product Designer</div>
+                <div class="our-team__position">Product Designer</div>
                 <div class="app-icons">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-instagram"></use>
@@ -180,11 +184,11 @@
             </figure>
           </li>
           <li>
-            <figure class="white-box">
+            <figure class="our-team__person-bg">
               <img src="images/kylie_evans.jpg" alt="Kylie Evans" />
-              <figcaption class="font-style-figacaption">
+              <figcaption class="our-team__figacaption">
                 Kylie Evans
-                <div class="font-style-position">Frontend Developer</div>
+                <div class="our-team__position">Frontend Developer</div>
                 <div class="app-icons">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-instagram"></use>
@@ -209,11 +213,11 @@
             </figure>
           </li>
           <li>
-            <figure class="white-box">
+            <figure class="our-team__person-bg">
               <img src="images/ryan_harris.jpg" alt="Ryan Harris" />
-              <figcaption class="font-style-figacaption">
+              <figcaption class="our-team__figacaption">
                 Ryan Harris
-                <div class="font-style-position">Marketing</div>
+                <div class="our-team__position">Marketing</div>
                 <div class="app-icons">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-instagram"></use>
@@ -238,11 +242,11 @@
             </figure>
           </li>
           <li>
-            <figure class="white-box">
+            <figure class="our-team__person-bg">
               <img src="images/tyler_moore.jpg" alt="Tyler Moore" />
-              <figcaption class="font-style-figacaption">
+              <figcaption class="our-team__figacaption">
                 Tyler Moore
-                <div class="font-style-position">UI Designer</div>
+                <div class="our-team__position">UI Designer</div>
                 <div class="app-icons">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-instagram"></use>
@@ -268,35 +272,35 @@
           </li>
         </ul>
       </section>
-      <section class="section">
-        <h2>Nasi klienci</h2>
-        <ul class="container">
-          <li class="company-icons">
+      <section class="companies">
+        <h2 class="companies__heading">Nasi klienci</h2>
+        <ul class="companies__display">
+          <li class="company-icon">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-1"></use>
             </svg>
           </li>
-          <li class="company-icons">
+          <li class="company-icon">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-2"></use>
             </svg>
           </li>
-          <li class="company-icons">
+          <li class="company-icon">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-3"></use>
             </svg>
           </li>
-          <li class="company-icons">
+          <li class="company-icon">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-4"></use>
             </svg>
           </li>
-          <li class="company-icons">
+          <li class="company-icon">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-5"></use>
             </svg>
           </li>
-          <li class="company-icons">
+          <li class="company-icon">
             <svg width="106" height="60">
               <use href="images/icons.svg#icon-company-6"></use>
             </svg>
@@ -304,36 +308,40 @@
         </ul>
       </section>
     </main>
-    <footer class="footer-background footer-style">
-      <div class="container-footer">
-        <ul class="find-us-placement">
+    <footer class="footer">
+      <div class="footer__container">
+        <ul class="footer__join-us">
           <li class="logo">
-            <a href="#">Web<span class="footer-logo-color">Studio</span></a>
+            <a href="#">Web<span class="footer__logo-color">Studio</span></a>
           </li>
-          <li><p class="find-us-style">Dołącz do nas</p></li>
-          <li><p class="sub-style">Zapisz się do newslettera</p></li>
+          <li><p class="footer__join-us__style">Dołącz do nas</p></li>
+          <li>
+            <p class="footer__join-us__style footer__join-us__style--padding">
+              Zapisz się do newslettera
+            </p>
+          </li>
         </ul>
-        <address class="address-padding">
-          <ul class="address-style">
-            <div class="find-us-icons">
+        <address>
+          <ul class="footer__address footer-styl">
+            <div class="footer__display">
               <li>695 Park Ave, New York, NY 10065,<br />United States</li>
-              <li class="find-us-icons-placment">
-                <div class="find-us-app-icons">
+              <li class="find-us-icons">
+                <div class="find-us-icons__style">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </div>
-                <div class="find-us-app-icons">
+                <div class="find-us-icons__style">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </div>
-                <div class="find-us-app-icons">
+                <div class="find-us-icons__style">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </div>
-                <div class="find-us-app-icons">
+                <div class="find-us-icons__style">
                   <svg width="20" height="20">
                     <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
@@ -341,9 +349,9 @@
               </li>
               <li>
                 <form>
-                  <label class="sub-email-position">
+                  <label class="footer__email-input">
                     <input
-                      class="sub-email-input"
+                      class="footer__email-style"
                       type="email"
                       name="email"
                       placeholder="E-mail"
@@ -351,20 +359,27 @@
                   </label>
                 </form>
               </li>
-              <li class="hnn">
-                <button class="sub-button" type="submit">Zapisz się</button>
-                <svg width="24" height="24" class="send-icon">
+              <li>
+                <button
+                  class="main-button main-button--placement-send"
+                  type="submit"
+                >
+                  Zapisz się
+                </button>
+                <svg width="24" height="24" class="main-button__svg-send">
                   <use href="images/icons.svg#icon-send"></use>
                 </svg>
               </li>
             </div>
             <li>
-              <a href="mailto:info@devstudio.com" class="hover"
+              <a href="mailto:info@devstudio.com" class="navigation__hfa"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+1212-772-4150" class="hover">+1 212-772-4150</a>
+              <a href="tel:+1212-772-4150" class="navigation__hfa"
+                >+1 212-772-4150</a
+              >
             </li>
           </ul>
         </address>
@@ -372,69 +387,73 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <h2 class="modal-heading">
+        <h2 class="modal__heading">
           Leave your information and we'll call you back
         </h2>
         <form>
-          <label class="label-style"
+          <label class="modal__label"
             >Name
-            <div class="input-styling">
-              <svg class="svg-name-position" width="18" height="18">
+            <div class="modal__input-hfa">
+              <svg class="modal__svg modal__svg--name" width="18" height="18">
                 <use href="images/icons.svg#icon-person"></use>
               </svg>
-              <input class="input-style" type="name" name="name" />
+              <input class="modal__input" type="name" name="name" />
             </div>
           </label>
-          <label class="label-style"
+          <label class="modal__label"
             >Telephone
-            <div class="input-styling">
-              <svg class="svg-tel-position" width="18" height="18">
+            <div class="modal__input-hfa">
+              <svg class="modal__svg modal__svg--tel" width="18" height="18">
                 <use href="images/icons.svg#icon-phone"></use>
               </svg>
-              <input class="input-style" type="tel" name="telephone" />
+              <input class="modal__input" type="tel" name="telephone" />
             </div>
           </label>
-          <label class="label-style"
+          <label class="modal__label"
             >Email
-            <div class="input-styling">
-              <svg class="svg-email-position" width="18" height="18">
+            <div class="modal__input-hfa">
+              <svg class="modal__svg modal__svg--email" width="18" height="18">
                 <use href="images/icons.svg#icon-mail"></use>
               </svg>
-              <input class="input-style" type="email" name="email" />
+              <input class="modal__input" type="email" name="email" />
             </div>
           </label>
-          <label class="comments-style"
+          <label class="modal__comments"
             >Comments
             <textarea
-              class="textarea-style"
+              class="modal__comments-textarea"
               name="comments"
-              rows="5"
+              rows="6"
               placeholder="Enter the text"
             ></textarea>
           </label>
-          <div class="checkbox-style">
-            <label class="checkbox-btn">
+          <div>
+            <label class="checkbox">
               <input
-                class="checkbox-box-style"
+                class="checkbox__style checkbox__svg-icon"
                 type="checkbox"
                 name="regulamin"
                 value="regulamin"
-              /><svg class="svg-check-position" width="16" height="15">
+              /><svg class="checkbox__check-svg" width="16" height="15">
                 <use href="images/icons.svg#icon-check"></use>
               </svg>
-              <p class="terms-style">
-                Oświadczam iż akceptuję&nbsp;<a class="link-style" href=""
+              <p class="modal__terms">
+                Oświadczam iż akceptuję&nbsp;<a
+                  class="modal__link-style"
+                  href=""
                   >Regulamin</a
                 >&nbsp;i&nbsp;
-                <a class="link-style" href="">Politykę Prywatności.</a>
+                <a class="modal__link-style" href="">Politykę Prywatności.</a>
               </p>
             </label>
           </div>
-          <div class="button-position">
-            <button class="button-send-style" type="submit">Send</button>
+          <div class="modal__btn-place">
+            <button class="main-button main__button-extend3" type="submit">
+              Send
+            </button>
           </div>
         </form>
-        <button class="modal-btn-close" data-modal-close>
+        <button class="modal__btn-close" data-modal-close>
           <svg width="11" height="11">
             <use href="images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
