--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <a href="#">Web<span class="logo__color">Studio</span></a>
           </li>
           <li>
-            <a href="#" class="navigation__hfa navigation__underline-studio"
+            <a
+              href="#"
+              class="navigation__hfa navigation__underline navigation__underline--studio"
               >Studio</a
             >
           </li>
@@ -448,9 +450,7 @@
             </label>
           </div>
           <div class="modal__btn-place">
-            <button class="main-button main__button-extend3" type="submit">
-              Send
-            </button>
+            <button class="main-button" type="submit">Send</button>
           </div>
         </form>
         <button class="modal__btn-close" data-modal-close>
