--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
             <a href="index.html" class="navigation__hfa">Studio</a>
           </li>
           <li class="navigation__inside-padding">
-            <a href="#" class="navigation__hfa navigation__underline-portfolio"
+            <a
+              href="#"
+              class="navigation__hfa navigation__underline navigation__underline--portfolio"
               >Portfolio</a
             >
           </li>
@@ -294,10 +296,10 @@
         </ul>
       </section>
     </main>
-    <footer class="footer-style footer">
+    <footer class="footer">
       <div class="footer__container">
-        <ul class="footer__join-us footer-styl">
-          <li class="logo logo-extend">
+        <ul class="footer__join-us">
+          <li class="logo">
             <a href="#">Web<span class="footer__logo-color">Studio</span></a>
           </li>
           <li><p class="footer__join-us__style">Dołącz do nas</p></li>
@@ -346,7 +348,10 @@
                 </form>
               </li>
               <li>
-                <button class="main-button main-button-extend2" type="submit">
+                <button
+                  class="main-button main-button--placement-send"
+                  type="submit"
+                >
                   Zapisz się
                 </button>
                 <svg width="24" height="24" class="main-button__svg-send">
