--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </ul>
       </section>
       <section class="about-us">
-        <h2>What we do</h2>
+        <h2>Czym się zajmujemy</h2>
         <ul class="about-us__display">
           <li>
             <img
